updated bg and removed script tag of umami

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,12 +8,13 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-    <script defer src="https://umami-false-analytics.vercel.app/script.js" data-website-id="2600e6db-bd0c-4bdf-aa1e-19371f31892b"></script>
+    <!-- <script defer src="https://umami-false-analytics.vercel.app/script.js" data-website-id="2600e6db-bd0c-4bdf-aa1e-19371f31892b"></script> -->
     <style>
       body {
         padding: 0;
         margin: 0;
-        background-color: bisque;
+        background-color: #635ead;
+
       }
 
       .container {
